--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
+    "axios": "^0.21.1",
     "react": "16.13.1",
+    "react-hook-form": "^6.14.2",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-safe-area-context": "^3.1.9",
