--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "axios": "^0.21.1",
+    "class-transformer": "^0.3.2",
     "react": "16.13.1",
     "react-hook-form": "^6.14.2",
     "react-native": "0.63.4",
